prep-0002 - Add home page working fine.
