# src/app/app.routes.ts
@@ -7,10 +7,10 @@ import { LoginComponent } from './auth/login/login.component';
 import { ForgotPasswordComponent } from './auth/forgot-password/forgot-password.component';
 import { RegisterComponent } from './auth/register/register.component';
 import { ChooseCityComponent } from './shared/components/choose-city/choose-city.component';
-
+import { HomeComponent } from './user/home/home.component';
 export const routes: Routes = [
     // Redirect empty path to login
-    {path: '', redirectTo: 'auth/login', pathMatch: 'full'},
+    {path: '', redirectTo: '/home', pathMatch: 'full'},
     
     // Auth routes
     {path: 'auth/login', component: LoginComponent},
@@ -24,6 +24,9 @@ export const routes: Routes = [
     {path: 'header', component: HeaderComponent},
     {path: 'choose-city', component: ChooseCityComponent},
     
+    // user related routes. 
+    {path: 'home', component: HomeComponent},
+
     // Wildcard route for 404
     {path: '**', redirectTo: 'auth/login'}
 ];
